# Robocup-Home_25ss_tutorials

system_integration_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
system_integration_ws/devel/.private/catkin_tools_prebuild/: .catkin  setup.fish
system_integration_ws/devel/.private/controllers_tutorials/: .catkin  local_setup.fish  local_setup.sh
system_integration_ws/devel/.private/ics_gazebo/: .catkin
system_integration_ws/devel/.private/real_maps/: .catkin  .rosinstall  setup.fish  setup.sh
system_integration_ws/devel/.private/red_marker_detector/: .catkin  .rosinstall  local_setup.fish  setup.sh
system_integration_ws/devel/.private/tiago_localization/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.sh
system_integration_ws/devel/.private/tiago_move/: .catkin  .rosinstall  local_setup.fish  setup.sh
system_integration_ws/devel/.private/tiago_task_manager/: .catkin  .rosinstall  _setup_util.py  local_setup.fish  setup.fish  setup.sh
system_integration_ws/devel/include/tiago_move/: GenerateGrasps.h  GenerateGraspsRequest.h  GenerateGraspsResponse.h
system_integration_ws/devel/lib/controllers_tutorials/: build_map_controller  raise_head  run_traj_control
system_integration_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  controllers_tutorials.pc  ics_gazebo.pc  real_maps.pc  red_marker_detector.pc  tiago_localization.pc  tiago_move.pc  tiago_task_manager.pc
system_integration_ws/devel/lib/red_marker_detector/: align_yaw_to_marker.py  blue_marker_pose_node.py  red_marker_detector_node.py  red_marker_detector_top3.py
system_integration_ws/devel/lib/tiago_localization/: tiago_localization_node
system_integration_ws/devel/lib/tiago_move/: grip_with_index  tiago_grasp_node  tiago_move_node_A  tiago_move_node_B  tiago_place_node
system_integration_ws/devel/lib/tiago_task_manager/: tiago_state_machine.py
system_integration_ws/logs/controllers_tutorials/: build.make.000.log.stderr
system_integration_ws/logs/tiago_move/: build.cmake.000.log.stderr
system_integration_ws/src/: readme.txt  real_op_instruction.txt
system_integration_ws/src/controllers_tutorials/: CMakeLists.txt  tutorial_controller_plugins.xml
system_integration_ws/src/controllers_tutorials/launch/: new_head_controller_tiago.launch
system_integration_ws/src/controllers_tutorials/src/: build_map_controller.cpp  new_head_controller.cpp  raise_head.cpp  run_traj_control.cpp
system_integration_ws/src/ics_gazebo/: tiago_arm_torso_gripper.urdf
system_integration_ws/src/ics_gazebo/config/: tiago.rviz
system_integration_ws/src/ics_gazebo/launch/: perception_pipeline.launch  rviz_remote.launch  tiago.launch  tiago_gazebo.launch  tiago_main.launch  tiago_main_real.launch  tiago_map_localization.launch  tiago_real_slam.launch  tiago_slam_robot.launch  tiago_world.launch
system_integration_ws/src/ics_gazebo/worlds/: Tutorial2.world  door.world
system_integration_ws/src/real_maps/: CMakeLists.txt
system_integration_ws/src/real_maps/launch/: load_my_map.launch
system_integration_ws/src/real_maps/maps/: my_map.yaml  my_room_map.yaml
system_integration_ws/src/red_marker_detector/: CMakeLists.txt
system_integration_ws/src/red_marker_detector/scripts/: align_yaw_to_marker_simulation.py  blue_marker_step_simulator.py  controller.py  red_marker_detector_node.py  wall_detection.py
system_integration_ws/src/tiago_move/: CMakeLists.txt
system_integration_ws/src/tiago_move/config/: pick_motions.yaml
system_integration_ws/src/tiago_task_manager/: CMakeLists.txt  package.xml
tutorial2_ws/: readme.txt
tutorial2_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
tutorial2_ws/logs/controllers_tutorials/: build.make.000.log.stderr
tutorial3_ws/: README
tutorial3_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
tutorial3_ws/src/tiago_move/: CMakeLists.txt
tutorial4_ws/: readme.txt
tutorial4_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
tutorial4_ws/logs/controllers_tutorials/: build.make.000.log.stderr
tutorial4_ws/logs/darknet_ros/: build.make.000.log.stderr
tutorial4_ws/src/controllers_tutorials/: CMakeLists.txt
tutorial5_ws/: readme.txt
tutorial5_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
tutorial5_ws/logs/controllers_tutorials/: build.make.000.log.stderr
tutorial5_ws/logs/darknet_ros/: build.make.000.log.stderr
tutorial5_ws/logs/tiago_move/: build.check.011.log.stderr
tutorial5_ws/src/arm_control/: CMakeLists.txt
tutorial5_ws/src/arm_control/launch/: arm_above_moveit.launch
tutorial5_ws/src/arm_control/src/: arm_control_moveit.cpp
tutorial5_ws/src/arm_control/urdf/: tiago_arm_torso.urdf
tutorial5_ws/src/controllers_tutorials/: CMakeLists.txt
tutorial5_ws/src/ics_gazebo/: CMakeLists.txt  package.xml
tutorial5_ws/src/ics_gazebo/config/: joint_trajectory_controllers.yaml  tiago.rviz
tutorial5_ws/src/ics_gazebo/launch/: ROBOT.launch  edit_world.launch  object_detection.launch  tiago.launch  tiago_gazebo.launch
tutorial5_ws/src/ics_gazebo/models/door/: door.sdf
tutorial5_ws/src/ics_gazebo/src/: sequential_launcher_smach.py
tutorial5_ws/src/ics_gazebo/worlds/: tutorial2.world
tutorial5_ws/src/plane_segmentation/: CMakeLists.txt
tutorial5_ws/src/tiago_move/: CMakeLists.txt  package.xml
tutorial5_ws/src/tiago_move/src/: no_cup_react_node.cpp
(+519 files in other folders)
